--- a/Lesson-II/homework/src/App.css
+++ b/Lesson-II/homework/src/App.css
@@ -6,7 +6,14 @@
   border: transparent;
 }
 
-input {
-  display: block;
-  width: 50%;
+.board {
+  display: flex;
+}
+
+.board__item {
+  flex-grow:1;
+}
+body {
+  background-color: rgb(111, 94, 184);
+  color:rgb(223, 226, 212)
 }
