--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .sended {
-  border: 5px solid green;
+  border: 1px solid green;
 }
 
 .notSended {
@@ -10,6 +10,10 @@
   display: flex;
 }
 
-.board__item {
-  flex-grow:1;
+.board__item-messages {
+  flex-grow:4;
+}
+
+.board__item-chats {
+  flex-grow: 1;
 }
